what is passive house spacing fixed mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 *{
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   /* font-family: "PT Sans", sans-serif; */
 }
 
 .container-wrap{
-    display: flex;
+    /* display: flex;
     flex-shrink: 1;
-    width: 100%;
+    width: 100%; */
   }
