--- a/src/components/Pages/Accord.css
+++ b/src/components/Pages/Accord.css
@@ -83,6 +83,10 @@ h3, p{
     width: 100vw;
 } */
 
+.accord-main-cont{
+  height: 100vh;
+}
+
 .top-cont {
   display: flex;
   justify-content: center;
